# tech_course_project

./: README.md
build-client-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-client-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: codemodel-v2-e363bed2a860e30365b2.json  directory-.-Debug-ad5e5580b9c5bb83e30f.json  index-2023-06-06T14-52-37-0695.json  target-Client-Debug-60c2a8091dc17f1be597.json
build-client-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-121a78459517aa4b53a6.json  cmakeFiles-v1-af825ded44fe1c508650.json  codemodel-v2-71c8dddcdaa96c6aa927.json  index-2023-06-06T14-52-34-0939.json  target-Client-Debug-5b2e7c40b86e859bb500.json  target-Client_autogen-Debug-2eb97a25c5f4c6ef2c7a.json  target-Client_autogen_timestamp_deps-Debug-8a53f54b21c15d11e39f.json
build-client-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-client-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-client-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-1c9a9551f23fd022d7c3.json  codemodel-v2-b232ba989469ff63cb7e.json  directory-.-Debug-5746df6854e7dbebf7ab.json  index-2023-06-12T14-41-42-0500.json  target-Client-Debug-bf1cc7cd61e68a116452.json  target-Client_autogen_timestamp_deps-Debug-aec7045c8607c5fe9e9b.json
build-client-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-7b5656289e503e3a6128.json  codemodel-v2-80e03b47e00ed6c9ad3f.json  directory-.-Debug-c2179dd34ccdee7141ec.json  index-2023-06-08T05-01-49-0435.json  target-Client-Debug-5865277b99ec0d34d987.json  target-Client_autogen-Debug-96c1a280eea3b2600258.json
build-client-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-client-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/Client_autogen/: deps  mocs_compilation.cpp
build-client-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/Client_autogen/EWIEGA46WW/: moc_admininfowidget.cpp  moc_admininfowidget.cpp.d  moc_adminpage.cpp  moc_adminpage.cpp.d  moc_dropdownmenu.cpp  moc_dropdownmenu.cpp.d  moc_loginwindow.cpp  moc_loginwindow.cpp.d
build-client-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/Client_autogen/include/: ui_adminpage.h  ui_loginwindow.h
client/: CMakeLists.txt  HTTPRequestManager.cpp  HTTPRequestManager.h  addcategory.cpp  addcategory.h  addcategory.ui  addsubcategory.cpp  addsubcategory.h  addsubcategory.ui  addteams.cpp  addteams.h  addteams.ui  admininfowidget.cpp  admininfowidget.h  adminpage.cpp  adminpage.h  adminpage.ui  category.cpp  category.h  categorycustommenu.cpp  categorycustommenu.h  client.cpp  client.h  clientsession.cpp  clientsession.h  customcontextmenu.cpp  customcontextmenu.h  deletepopup.cpp  deletepopup.h  deletepopup.ui  dropdownmenu.cpp  dropdownmenu.h  editpopup.cpp  editpopup.h  hmenu.cpp  hmenu.h  hmenuitem.cpp  hmenuitem.h  loginwindow.cpp  loginwindow.h  (+16 more)
common/: constants.cpp  constants.h
common/error/: unauthorizedTokenError.cpp  unauthorizedTokenError.h
common/interface/: IJsonSerializable.h
common/model/: User.cpp  User.h  category.cpp  category.h  categoryCreator.cpp  categoryCreator.h  creator.h  entity.h  subcategory.cpp  subcategory.h  subcategoryCreator.cpp  subcategoryCreator.h  team.cpp  team.h  teamCreator.cpp  teamCreator.h
dal/: CMakeLists.txt  dal_global.h  dbexecutor.cpp  dbexecutor.h  idatamodel.cpp  idatamodel.h  main.cpp  querybuilder.cpp  querybuilder.h
doc/: Code Conventions.pptx
server/: CMakeLists.txt  CMakeLists.txt.user.0ff4484  Category.cpp  Category.h  IJsonSerializable.h  categoriesmodel.cpp  categoriesmodel.h  database.cpp  database.h  db_model.cpp  db_model.h  dbmodel.cpp  dbmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  server.cpp  server.h  storage.cpp  storage.h  subcategoryModel.cpp  subcategoryModel.h  teammodel.cpp  teammodel.h  user.cpp  user.h
tests/: CMakeLists.txt  CategoriesModelSerializationAndDeserializationTests.cpp  ClientAndServerTests.cpp  SubcategoriesModelSerializationAndDeserializationTests.cpp  TeamModelMock.h  TeamModelTests.cpp  TeamsModelSerializationAndDeserializationTests.cpp  main.cpp  serialization_tests.cpp  tst_sporthubtests.cpp
